[gd_scene load_steps=16 format=2]

[ext_resource path="res://resource/light/light_mask_3.png" type="Texture" id=1]
[ext_resource path="res://scene/game/checkpoint/checkpoint.gd" type="Script" id=2]
[ext_resource path="res://resource/item/checkpoint.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 155.096

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.454106, 0.985507 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.515625, 0, 1, 1, 0.230469, 0.230469, 0.447059 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.00434783, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.986956, 0.509091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 1, 5, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
angular_velocity = 350.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 30.0
angle = 45.0
scale = 5.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.400966, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.00784326, 1, 0, 0.794317, 0.00743163, 0.476563, 0.00372314, 0.447059 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.982609, 0.518182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 1, 5, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
angular_velocity = 350.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 25.0
angle = 45.0
scale = 5.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )

[sub_resource type="Animation" id=12]
resource_name = "light"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1.4, 1.4 ), Vector2( 1.6, 1.6 ), Vector2( 1.4, 1.4 ), Vector2( 1.45, 1.45 ), Vector2( 1.55, 1.55 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ), Vector2( 1.6, 1.6 ), Vector2( 1.5, 1.5 ), Vector2( 1.4, 1.4 ), Vector2( 1.5, 1.5 ) ]
}

[node name="Checkpoint" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -0.307358 )
shape = SubResource( 1 )

[node name="RedParticule" type="Node2D" parent="."]

[node name="Particles2D" type="Particles2D" parent="RedParticule"]
position = Vector2( 41.8069, -100.398 )
rotation = -1.5708
amount = 90
process_material = SubResource( 6 )

[node name="Particles2D2" type="Particles2D" parent="RedParticule"]
position = Vector2( -44.1944, -99.6415 )
rotation = -1.5708
amount = 90
process_material = SubResource( 6 )

[node name="GreenParticule" type="Node2D" parent="."]
visible = false

[node name="Particles2D3" type="Particles2D" parent="GreenParticule"]
position = Vector2( 41.4738, -100.883 )
rotation = -1.5708
amount = 90
process_material = SubResource( 11 )

[node name="Particles2D4" type="Particles2D" parent="GreenParticule"]
position = Vector2( -43.9522, -100.024 )
rotation = -1.5708
amount = 90
process_material = SubResource( 11 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -0.618469, -44.0695 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 41.7357, -100.295 )
scale = Vector2( 1.45, 1.45 )
texture = ExtResource( 1 )
color = Color( 0.580392, 1, 0.266667, 1 )

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( -42.5603, -98.6741 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )
color = Color( 0.580392, 1, 0.266667, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "light"
anims/light = SubResource( 12 )
[connection signal="body_entered" from="." to="." method="_on_Checkpoint_body_entered"]
